--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset='utf-8' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" type="text/css" media="all" href="style.css">
+	<link rel="stylesheet" type="text/css" media="all" href="piday.css">
 	<title>PI day</title>
 </head>
 <body>
   <div id="helloworld">Hello world!</div>
+  <script type="text/javascript" src="piday.js"></script>
 </body>
 </html>
