--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="pt">
 <head>
+  <meta charset="utf-8" />
+  <title>Dia do Pi</title>
 	<meta charset='utf-8' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" media="all" href="piday.css">
-	<title>PI day</title>
+
+  <script src="piday.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="piday.css" type="text/css" /> 
+  <script type="text/javascript">
+    window.onload = function(){
+      init();
+    }
+  </script>
+
 </head>
 <body>
-  <div id="helloworld">Hello world!</div>
-  <script type="text/javascript" src="piday.js"></script>
+  <div id="heading">
+	<h1>Dia do Pi</h1>
+	<p>Escola EB 2/3 de Vila d'Este</p>
+  </div>
+  <div id="content" class="centered"> 
+  <label for="pi_digits" id="pi_int">3.</label>
+  <textarea id="pi_digits" onkeydown="return onlyDigits (event)" onkeyup = "return validateDigits(event)"></textarea>
+  <div id="num_tries"></div>
+  <a href="#" onclick="init(); return false" class="invisible">Reiniciar</a>
+  </div>
+  <div id="footer">
+	<p class="floatLeft">Ano letivo 2012/13</p>
+	<img id="logo" class="floatRight" src="./img/897347.jpg" alt="Escola EB 2/3 de Vila d'Este" title="Escola EB 2/3 de Vila d'Este" />
+  </div>
 </body>
 </html>
