Added link to Trackets script

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <script src="piday.js" type="text/javascript" charset="utf-8"></script>
   <link rel="stylesheet" href="piday.css" type="text/css" /> 
+  <script type="text/javascript"
+          data-trackets-key="aae147a0f941d28e39936485d752d131"
+          src="https://trackets.s3.amazonaws.com/client.js">
+  </script>
   <script type="text/javascript">
     window.onload = function(){
       PIDAY.new_game('pi_digits', 'num_tries');
